--- a/parts/autoproject/README
+++ b/parts/autoproject/README
@@ -3,11 +3,12 @@ Autoprojectpart is a projectmanager for Automake based projects.
 Loads and maintains Makefile.am files. The Autoprojectpart
 supports creating subprojects, targets, services (.desktop) and applications (.desktop).
 Automake projects can be configured on subprojects, targets (except DATA and HEADER targets).
-It will regenerate a projects Makefile.am files dynamically as you add or 
+It will regenerate the projects Makefile.am files dynamically as you add or 
 reconfigure subprojects**. Unsupported automake features will be left unchanged
-(hopefully) no major testing has been run yet (at least not be myself).
+(hopefully), no major testing has been run yet (at least not by myself).
 
 Maintainer: Victor Röder <victor_roeder@gmx.de>
+Lastest changes: 12/13/02
 
 TODO (taken from TODO file):
 -> automake part:
@@ -18,11 +19,16 @@ TODO (taken from TODO file):
   - Probably some Makefile.am entries should not be written if they are
     empty (DEPENDENCIES, ... what else?)
   - Allow to remove everything you can add (subprojects, targets, etc...)
+	-> Removing targets done**
 
 **)
 KNOWN BUGS:
 -> Lower Automake Manager view does not update it's view when adding a subproject (and targets,
 	etc to the new subproject)
+-> When removing a target with "Remove files from disc" checked, check other target, e.g. "noinst_HEADER" if
+	a file that has been deleted is listed there.
+-> [FIXED] Remove Target seems to emit removedFilesFromProject wrong. No files with relative paths???
+-> If removing the Active Target, update the .kdevelop file, too!
 
 	
 NOTE:
