--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-22 F@lk Brettschneider <falk@kdevelop.org>
+	* QEditor: double click selection improved
+	* renaming of main window classes, the names were confusing
+    
 2002-12-18 F@lk Brettschneider <falk@kdevelop.org>
 	* QEditor: can now delete words via Ctrl+Backspace and Ctrl+Del
 	* new class TopLevelShare, moved doubled stuff to it from the 2 main widget classes
