--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-12-18 Caleb Tennis <caleb@aei-tech.com>
+        * Hack to fix KTabZoomFrame from going smaller than the
+          sizeHint() of the part it is loading.  This needs more work,
+          but is a start
+        * Close the KTabZoomFrame if the current loaded part is closed
+
 2002-12-26 Caleb Tennis <caleb@aei-tech.com>
 	* Get AppWizard name and email settings from KDE emaildefaults
           file if it's available
