--- a/AUTHORS
+++ b/AUTHORS
@@ -44,6 +44,8 @@ Patches:
 SplashScreen:
   Marion Klein <MarionKlein@wanadoo.fr>
 
+KTabBar, bug fixes, Gideon Release:
+  Caleb Tennis <caleb@aei-tech.com>
 
 Other software included in the source package:
 
