*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* Fix broken signal/slot connections in code
 	* Add RMB context menu to ideal mode tabs to allow file closing
 	* Add ability to configure output window fonts
+	* Make classview show struct information
 
 2002-12-29 Harald Fernengel <harry@kdevelop.org>
 	* Added valgrind part, requires installed valgrind
