--- a/doc/kdevelop/index.docbook
+++ b/doc/kdevelop/index.docbook
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <!DOCTYPE book PUBLIC "-//KDE//DTD DocBook XML V4.1.2-Based Variant V1.1//EN" "dtd/kdex.dtd" [
-  <!ENTITY kdevelop "<application>KDevelop 3.0</application>">
+  <!ENTITY kdevelop "<application>KDevelop</application>">
   <!ENTITY grep "<command>grep</command>">
   <!ENTITY egrep "<command>egrep</command>">
   <!ENTITY ctags "<command>ctags</command>">
@@ -26,7 +26,7 @@
 <bookinfo>
 <title>&kdevelop; Documentation</title>
 
-<date>2002-12-13</date>
+<date>2002-11-25</date>
 <releaseinfo>3.0</releaseinfo>
 
 <authorgroup>
@@ -68,10 +68,8 @@ Development Environment (Gideon)</para>
 
 </bookinfo>
 
-<chapter id="unixdev">
-<title>Development on UNIX</title>
-<sect1 id="overview-unixdev">
-<title>Overview</title>
+<chapter id="overview">
+<title>Overview: Development on UNIX</title>
 
 <para>
 From the beginning, UNIX has maintained two very different development
@@ -129,8 +127,9 @@ they all have implementations that are freely distributable.
 <para>
 
 </para>
-</sect1>
-<sect1 id="overview-buildsystems">
+
+
+<simplesect id="overview-buildsystems">
 <title>Build systems</title>
 
 <para>
@@ -146,7 +145,7 @@ header file, you need to compile all files which include this header file.
 </para>
 
 <para>
-One tool which takes care of recompilations is <command>make</command>.
+A tool which takes care of recompilations is <command>make</command>.
 It takes as input a so-called <filename>Makefile</filename>, which declares
 some <emphasis>targets</emphasis>, the commands which are to be executed
 to "make" the target, and a set of <emphasis>dependencies</emphasis>. We
@@ -157,19 +156,21 @@ the build system can be useful. See the <ulink url="info://make/Top">
 <citetitle>GNU Make Manual</citetitle></ulink>.
 </para>
 
-</sect1>
+</simplesect>
 
 
-<sect1 id="overview-guidevelopment">
+<simplesect id="overview-guidevelopment">
 <title>GUI Development</title>
+
 <para>
-Application development becomes even more difficult when having to design not only the
-underlying features, but also the user interface.  Creating a graphical interface that
-not only accomplishes all of the desired features of the program but is also effective,
-clean, and robust is a major challenge.
+Application developers become even more encumbered by having to not only create
+program libraries and logic, but also provide a easy to use custom built user
+interface that is both intuitive and functional.  Most programmers receive little
+to no training in GUI development, and as a result user interfaces are 
+<ulink url="http://www.rha.com/ui_hall_of_shame.htm">poorly designed</ulink>.
 </para>
 
-</sect1>
+</simplesect>
 
 </chapter>
 
@@ -178,10 +179,10 @@ clean, and robust is a major challenge.
 <title>&kdevelop; Overview</title>
 
 <sect1 id="howto">
-<title>How to obtain &kdevelop;</title>
+<title>How to obtain KDevelop</title>
 <para>
 &kdevelop; can be found via the project home page at <ulink url="http://www.kdevelop.org">
-http://www.kdevelop.org</ulink> or via the <ulink url="http://download.kde.org">KDE ftp site</ulink>.
+http://www.kdevelop.org</ulink> or via the <ulink url="http://download.kde.org">KDE ftp site</ulink>
 &kdevelop; is also available from many different Linux distributions.
 </para>
 
@@ -405,8 +406,8 @@ The distribution of your applications does not require the end-user to have anyt
 other than a C++ compiler and the appropriate development libraries, which is most often the case; but
 ou can as well distribut binary packages of your application.  In either way, the end-user of your product
 does not have to have &kdevelop; installed.  For giving away your sources, we advise to include the 
-project file of &kdevelop; as well, as this makes it very easy for other developers to work with your
-sources if they use &kdevelop; as well.  For projects where several developers, maybe working on different
+project file of &kdevelop; as well, as this makes it very easy for other developerss to work with your
+sources if they use KDevelop as well.  For projects where several developers, maybe working on different
 places, are involved, this should be the case anyway to ensure consistency of the Makefiles so you don't
 run into trouble.  Especially on multi language applications, translators won't actually work with the
 source code, except in cases that require correction for enabling translation support.
@@ -484,26 +485,364 @@ This utility can be used to convert older &kdevelop; project files to 3.0 files.
 
 </chapter>
 
+
+
 <chapter id="editing">
 <title>Editing</title>
 
-<sect1 id="editing-intro">
-<title>Introduction</title>
+<sect1 id="keyboardmapping">
+<title>Keyboard mapping</title>
+<indexterm zone="keyboardmapping"><primary>keybindings</primary></indexterm>
+
 <para>
-By default, &kdevelop; attempts to use the Kate plugin editor as its default editor.  However, 
-&kdevelop; can utilize most plugin editors supported by KDE, such as KVim.  Also, &kdevelop; comes with
-a Qt-Designer like plugin editor.  This gives the end user many different editor choices.
+In the following, we will list the default keybindings of the
+default editor. You can configure them as you like (how?)
 </para>
+
+<informaltable>
+<tgroup cols="2">
+<tbody>
+
+<row><entry><para><keycap>
+  Left
+</keycap></para></entry>
+<entry><para>
+  Moves one character left
+</para></entry></row>
+
+<row><entry><para><keycap>
+  Right       
+</keycap></para></entry>
+<entry><para>
+  Moves one character right
+</para></entry></row>
+
+<row><entry><para><keycombo><keycap>
+  Ctrl
+</keycap><keycap>
+  Left   
+</keycap></keycombo></para></entry>
+<entry><para>
+  Moves one word left
+</para></entry></row>
+
+<row><entry><para><keycombo><keycap>
+  Ctrl
+</keycap><keycap>
+  Right  
+</keycap></keycombo></para></entry>
+<entry><para>
+  Moves one word right
+</para></entry></row>
+
+<row><entry><para><keycap>
+  Up          
+</keycap></para></entry>
+<entry><para>
+  Moves up one line
+</para></entry></row>
+
+<row><entry><para><keycap>
+  Down        
+</keycap></para></entry>
+<entry><para>
+  Moves down one line
+</para></entry></row>
+
+<row><entry><para><keycap>
+  PgUp        
+</keycap></para></entry>
+<entry><para>
+  Moves up one page
+</para></entry></row>
+
+<row><entry><para><keycap>
+    PgDn        
+</keycap></para></entry>
+<entry><para>
+  Moves down one page
+</para></entry></row>
+
+<row><entry><para><keycombo><keycap>
+  Ctrl
+</keycap><keycap>
+  PgUp   
+</keycap></keycombo></para></entry>
+<entry><para>
+  Moves to the beginning of the file
+</para></entry></row>
+
+<row><entry><para><keycombo><keycap>
+  Ctrl
+</keycap><keycap>
+  PgDn   
+</keycap></keycombo></para></entry>
+<entry><para>
+  Moves to the end of the file
+</para></entry></row>
+
+<row><entry><para><keycap>
+    Home        
+</keycap></para></entry>
+<entry><para>
+  Moves to the beginning of the line
+</para></entry></row>
+
+<row><entry><para><keycap>
+    End         
+</keycap></para></entry>
+<entry><para>
+  Moves to the end of the line
+</para></entry></row>
+
+</tbody>
+</tgroup>
+</informaltable>
+
 <para>
-For help on the Kate plugin editor, see the <ulink url="help:/kate">The Kate Handbook</ulink>
+For all the keys above, the Shift can be pressed additionally,
+to mark from the current cursor position to the one afterwards.
 </para>
+
+<informaltable>
+<tgroup cols="2">
+<tbody>
+
+<row><entry><para><keycap>
+  Backspace   
+</keycap></para></entry>
+<entry><para>
+  Deletes one character left
+</para></entry></row>
+
+<row><entry><para><keycap>
+  Delete      
+</keycap></para></entry>
+<entry><para>
+  Deletes the character under the cursor
+</para></entry></row>
+
+<row><entry><para><keycombo><keycap>
+  Ctrl
+</keycap><keycap>
+  C
+</keycap></keycombo></para></entry>
+<entry><para>
+  Copies the selected text to the clipboard
+</para></entry></row>
+
+<row><entry><para><keycombo><keycap>
+  Ctrl
+</keycap><keycap>
+  V
+</keycap></keycombo></para></entry>
+<entry><para>
+  Pastes the selected text from the clipboard
+</para></entry></row>
+
+<row><entry><para><keycombo><keycap>
+  Ctrl
+</keycap><keycap>
+  X      
+</keycap></keycombo></para></entry>
+<entry><para>
+  Deletes the selected text and puts it into the clipboard
+</para></entry></row>
+
+<row><entry><para><keycombo><keycap>
+  Ctrl
+</keycap><keycap>
+  Z        
+</keycap></keycombo></para></entry>
+<entry><para>
+  Undo
+</para></entry></row>
+
+<row><entry><para><keycombo><keycap>
+  Shift
+</keycap><keycap>
+  Ctrl
+</keycap><keycap>
+  Z  
+</keycap></keycombo></para></entry>
+<entry><para>
+Redo
+</para></entry></row>
+
+</tbody>
+</tgroup>
+</informaltable>
+
 </sect1>
 
-<sect1 id="editing-troll">
-<title>Using the Qt Designer based editor</title>
+
+<sect1 id="searchinggrepping">
+<title>Searching and grepping</title>
+<indexterm zone="searchinggrepping"><primary>searching</primary></indexterm>
+<indexterm zone="searchinggrepping"><primary>finding</primary></indexterm>
+
+<simplesect id="searching">
+<title>Searching for text</title>
+
+<para>
+<keycombo><keycap>Ctrl</keycap><keycap>F</keycap></keycombo>- Find 
+<keycombo><keycap>Ctrl</keycap><keycap>R</keycap></keycombo>- Replace
+</para>
+
+</simplesect>
+ 
+
+<simplesect id="isearch">
+<title>ISearch</title>
+<indexterm zone="isearch"><primary>isearch</primary></indexterm>
+<indexterm zone="isearch"><primary>incremental search</primary></indexterm>
+<indexterm zone="isearch"><primary>search</primary><secondary>incremental</secondary></indexterm>
+
+<para>
+The conventional search with <menuchoice><guimenu>Edit</guimenu>
+<guimenuitem>Find</guimenuitem></menuchoice> requires you to specify the full 
+search term before starting. Most of the time, it is much faster to search 
+incrementally. If you click into the edit field labeled 
+<guilabel>ISearch</guilabel> in the toolbar, the search is performed as you 
+type. You will find that often the desired term is already found after typing
+in 3 or 4 letters.
+</para>
+
+</simplesect>
+
+
+<simplesect id="grep">
+<title>Grep</title>
+<indexterm zone="grep"><primary>search</primary><secondary>in files</secondary></indexterm>
+
+<para>
+Both search mechanisms described above are restricted to searching within one
+source file. An additional tool which allows you to search through a (possibly
+large) number of files is available through the
+<guimenuitem>Search in Files...</guimenuitem> item in the 
+<guimenu>Edit</guimenu> menu. It is basically a frontend for the 
+&grep;(1) program.
+</para>
+
+<para>
+In the dialog, you can specify which files are searched. There is a number of 
+wildcard patterns available in a combo box. In this way, you can easily
+restrict the find mechanism to header files. Furthermore, you specify a 
+directory where the search is started. If you check the 
+<guibutton>Recursive</guibutton> box, the search iterates through all 
+directories in the hierarchy below this one.
+</para>
+
+<para>
+The search term is in general a regular expression following POSIX syntax. 
+For example, you can use the term <literal>"\&lt;K.*"</literal> if you want to
+find all words which begin with the letter K. The following characters
+are interpreted in a special way:
+</para>
+
+<informaltable>
+<tgroup cols="2">
+<tbody>
+
+<row><entry>
+  <literal>.</literal>
+</entry><entry>
+  Matches any character 
+</entry></row>
+<row><entry>
+  <literal>^</literal>
+</entry><entry>
+Matches the beginning of a line
+</entry></row>
+<row><entry>
+  <literal>$</literal>
+</entry><entry>
+  Matches the end of a line 
+</entry></row>
+<row><entry>
+  <literal>\&lt;</literal>
+</entry><entry>
+  Matches the beginning of a word 
+</entry></row>
+<row><entry>
+  <literal>\&gt;</literal>
+</entry><entry>
+  Matches the end of a word
+</entry></row>
+<row><entry>
+  <literal>?</literal>
+</entry><entry>
+  The preceding item matches less than once 
+</entry></row>
+<row><entry>
+  <literal>*</literal>
+</entry><entry>
+  The preceding item is matched zero or more times 
+</entry></row>
+<row><entry>
+  <literal>+</literal>
+</entry><entry>
+  The preceding item is matched once or more times 
+</entry></row>
+<row><entry>
+  <literal>{n}</literal>
+</entry><entry>
+  The preceding item is matched exactly n times 
+</entry></row>
+<row><entry>
+  <literal>{n,}</literal>
+</entry><entry>
+  The preceding item is matched n or more times 
+</entry></row>
+<row><entry>
+  <literal>{,n}</literal>
+</entry><entry>
+  The preceding item matches less than n times
+</entry></row>
+<row><entry>
+  <literal>{n,m}</literal>
+</entry><entry>
+  The preceding item matches at least <literal>n</literal> times but less 
+than <literal>m</literal> times
+</entry></row>
+
+</tbody>
+</tgroup>
+</informaltable>
+
+<para>
+Backreferences to bracketed subexpressions are also available by the notation
+<literal>\n</literal>.
+</para>
+
+<para>
+For C++ programmers, as special bonus there are some search templates
+available for typical patterns. These allow you to search for example
+all calls of member functions of a certain object.
+</para>
+
+<para>
+Once you start the search by clicking on the <guibutton>Search</guibutton>
+button, it will be performed by an external, asynchronous process. All found 
+items will appear in the view called <guilabel>Grep</guilabel>. You can then
+jump to the found items by clicking on them. Note that grep scans the files
+as they stored in the file system. If you have modified versions of them in 
+your editor, you may get some mismatches in the line number, or some found
+items will be invalid. You can avoid this by saving all files beforehand.
+</para>
+
+</simplesect>
+
+</sect1>
+  
+
+<sect1 id="newfiles">
+<title>Creating new files and classes</title>
+
 <para>
 </para>
-</sect1>  
+
+</sect1>
 
 </chapter>
 
@@ -511,23 +850,23 @@ For help on the Kate plugin editor, see the <ulink url="help:/kate">The Kate Han
 
 <chapter id="filebrowsers">
 <title>The file browsers</title>
-<sect1 id="filebrowser-intro">
-<title>Introduction</title>
+
 <para>
 On the left side of the main window, &kdevelop; can display various kinds of
-lists and trees for the selection of files.  
+lists and trees for the selection of files:
 </para>
-</sect1>
 
-<sect1 id="filebrowser-filetree">
+<itemizedlist>
+<listitem>
+<formalpara>
 <title>File Tree</title>
-
 <para>
 This shows a tree view of the file hierarchy below the project directory. If 
 you click on a file, it is loaded into the editor. For files which do not
 contain text, KDevelop starts an application that can handle the respective
 MIME type. 
 </para>
+</formalpara>
 
 <para>
 The file tree is regularly updated whenever something changes in the file 
@@ -556,15 +895,18 @@ the right mouse button on the root item of the tree.
 <imageobject><imagedata fileref="filetree.png"/></imageobject>
 </mediaobject>
 </figure>
-</sect1>
 
-<sect1 id="filebrowser-filegroups">
+</listitem>
+
+<listitem>
+<formalpara>
 <title>File Groups</title>
 <para>
 This shows the files belonging to the project, grouped by their file name 
 extension. As in the file tree, you can edit a file by clicking on it
 with the left mouse button.
 </para>
+</formalpara>
 
 <para>
 The groups shown in this view can be configured under
@@ -579,21 +921,17 @@ be put below more specific ones. For example, an asterisk for the
 <guilabel>Other</guilabel> group should  be the last pattern.
 </para>
 
-</sect1>
-<sect1 id="filebrowser-fileselector">
-<title>File Selector</title>
-<para>
-</para>
-</sect1>
+</listitem>
+
+</itemizedlist>
 
 </chapter>
+
 
 
 <chapter id="classbrowser">
 <title>The class browser</title>
 <indexterm zone="classbrowser"><primary>class browser</primary></indexterm>
-<sect1 id="classbrowser-intro">
-<title>Introduction</title>
 
 <para>
 When working on a project in an object-oriented language, your emphasis when
@@ -602,9 +940,8 @@ classes and their relationships. In order to help you navigating in the space
 of defined classes and symbols, &kdevelop; includes various class browsers 
 that visualize the class structure in different ways.
 </para>
-</sect1>
 
-<sect1 id="classbrowser-classview">
+<sect1 id="classview">
 <title>Class view</title>
 
 <para>
@@ -655,7 +992,7 @@ with an empty implementation.
 </sect1>
 
 
-<sect1 id="classbrowser-classtools">
+<sect1 id="classtools">
 <title>Class tools</title>
 
 <para>
@@ -666,7 +1003,7 @@ view and choosing <guimenuitem>Class tool...</guimenuitem>.
 </sect1>
 
 
-<sect1 id="classbrowser-classhierarchy">
+<sect1 id="classhierarchy">
 <title>Class hierarchy</title>
 
 <para>
@@ -690,6 +1027,8 @@ view and choosing <guimenuitem>Class tool...</guimenuitem>.
 </figure>
 
 </chapter>
+
+
 
 <chapter id="projectmanagement">
 <title>Building and Project management</title>
@@ -1693,39 +2032,38 @@ the content of the matched subgroups will be shown in a list box.
 
 <appendix id="misc">
 <title>Further information</title>
-
-
-<simplesect id="gettinginformation">
+<sect1 id="gettinginformation">
 <title>Getting information</title>
-
 <para>
 </para>
+</sect1>
 
-</simplesect>
-
-
-<simplesect id="reportingbugs">
+<sect1 id="reportingbugs">
 <title>Reporting bugs</title>
-
 <para>
 </para>
+</sect1>
 
-</simplesect>
-
-
-<simplesect id="licensing">
+<sect1 id="licensing">
 <title>Licensing</title>
-
 &underFDL;
 &underGPL;
-
-</simplesect>
-
-
+</sect1>
 </appendix>
 
-
+<appendix id="changelog">
+<title>Changes</title>
+<sect1 id="changes">
+<title>Changes to this document</title>
+<para>
+<itemizedlist>
+<listitem><para>
+2003-01-03 - Started this Changelog
+</para></listitem>
+</itemizedlist>
+</para>
+</sect1>
+</appendix>
 
 <index id="indexchapter"/>
-
 </book>
