--- a/parts/autoproject/README
+++ b/parts/autoproject/README
@@ -20,13 +20,15 @@ TODO (taken from TODO file):
     empty (DEPENDENCIES, ... what else?)
   - Allow to remove everything you can add (subprojects, targets, etc...)
 	-> Removing targets done**
-
+  - Add shortcuts to all functions
+  - Repair the "Target:" label of several dialogs
 **)
 KNOWN BUGS:
 -> Lower Automake Manager view does not update it's view when adding a subproject (and targets,
 	etc to the new subproject)
--> When removing a target with "Remove files from disc" checked, check other target, e.g. "noinst_HEADER" if
+-> [FIXED] When removing a target with "Remove files from disc" checked, check other target, e.g. "noinst_HEADER" if
 	a file that has been deleted is listed there.
+-> [FIXED] When removing a target the prefix and primary should not be deleted when there are other targets mentioned
 -> [FIXED] Remove Target seems to emit removedFilesFromProject wrong. No files with relative paths???
 -> If removing the Active Target, update the .kdevelop file, too!
 
