--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-01-07  Julian Rockey <linux@jrockey.com>
+	* Added PyQT template (QT application framework for Python) to appwizard
+
 2003-01-06  Victor Röder  <victor_roeder@gmx.de>
 	* Applied patch of Richard Lärkäng for top source directory support (only in Autoprojectpart yet!)
 	* Applied patch of Hamish Rodda for a more stable PartController::editDocument(...)
