--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-01-08  Julian Rockey <linux@jrockey.com>
+	* parts:
+	  - added new part to assist with creation of new files
+	* lib/interfaces:
+	  - added interface for new file creation
+	* lib/util:
+	  - added urlutil, general URL manipulation utilities
 2003-01-07  Jakob Simon-Gaarde <jsgaarde@tdcspace.dk>
   * Append to libpath in subproject configuration dialog
 
