*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-11 F@lk Brettschneider <falk@kdevelop.org>
+	* parts/fileview (called 'view on the project directory'):
+	  like used from KDevelop-2, directories now sorted above the files
+
 2003-01-10  Julian Rockey <linux@jrockey.com>
 	* parts/autoproject:
 	  - be a bit smarter when adding files to directories that have only one target
