--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,81 @@
+kdevelop (4:2.1.4-0woody4) unstable; urgency=low
+
+  * updated admin directory for templates. This makes new apps require automake1.6 /automake1.7,
+    added as a dependency. 
+
+ -- Ralf Nolden (KDE) <nolden@kde.org>  Sat,  4 Jan 2003 10:37:47 +0100
+
+kdevelop (4:2.1.4-0woody3) unstable; urgency=low
+
+  * build against 2002-12-31 KDE 3.1 branch because linked against libpng2 and 3 :-/
+
+ -- Ralf Nolden (KDE) <nolden@kde.org>  Thu,  2 Jan 2003 00:47:26 +0100
+
+kdevelop (4:2.1.4-0woody2) unstable; urgency=low
+
+  * woody build using KDE-3.1-branch 2002-12-27
+  * updated Recommends with doxygen, kdoc, qt3-tools, ebook-dev-kde20
+  * fixed .destkop files for version number 2.1.4
+  * backported fix in kdevelop/kdevelop/doctreeview.cpp for KShellProcess
+    as in KDE_2_2_BRANCH
+
+ -- Ralf Nolden (KDE) <nolden@kde.org>  Mon, 23 Dec 2002 12:44:17 +0100
+   
+kdevelop (4:2.1.4-0woody1) unstable; urgency=low
+
+  * KDE 3.0.5a release
+
+ -- Ralf Nolden (KDE) <nolden@kde.org>  Mon, 23 Dec 2002 12:44:17 +0100
+
+kdevelop (4:2.1.3-1.3) unstable; urgency=low
+
+  * Added libfam-dev to the build-depends
+
+ -- Norman Jordan <njordan@debian.org>  Sun,  3 Nov 2002 15:00:53 -0800
+
+kdevelop (4:2.1.3-1.2) unstable; urgency=low
+
+  * Updated CVS sources (2002-09-12)
+
+ -- Norman Jordan <njordan@debian.org>  Thu, 12 Sep 2002 21:20:37 -0700
+
+kdevelop (4:2.1.3-1.1) unstable; urgency=low
+
+  * Removed libpng-dev from the build depends
+  * Fixes for indexing KDE and QT documentation
+
+ -- Norman Jordan <njordan@debian.org>  Tue, 20 Aug 2002 23:26:45 -0700
+
+kdevelop (4:2.1.3-1.0) unstable; urgency=low
+
+  * Updated to 3.0.3 final
+
+ -- Norman Jordan <njordan@debian.org>  Mon, 19 Aug 2002 22:12:03 -0700
+
+kdevelop (4:2.1.3-0.3) unstable; urgency=low
+
+  * Updated CVS sources
+
+ -- Norman Jordan <njordan@debian.org>  Thu, 15 Aug 2002 18:23:35 -0700
+
+kdevelop (4:2.1.3-0.2) unstable; urgency=low
+
+  * Fixes for indexing the KDE documentation
+
+ -- Norman Jordan <njordan@debian.org>  Tue,  6 Aug 2002 19:53:25 -0700
+
+kdevelop (4:2.1.3-0.1) unstable; urgency=low
+
+  * Updated to prerelease 2.1.3 from CVS
+
+ -- Norman Jordan <njordan@debian.org>  Sat,  3 Aug 2002 00:26:17 -0700
+
+kdevelop (4:2.1.2-1) unstable; urgency=low
+
+  * Updated to release 2.1.2 from CVS
+
+ -- Norman Jordan <njordan@debian.org>  Sun,  7 Jul 2002 14:25:09 -0700
+
 kdevelop (4:2.1.2-0.1) unstable; urgency=low
 
   * New upstream version (from CVS)
