--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,18 @@
+2003-01-17 Harald Fernengel <harry@kdevelop.org>
+	* made CVS shell configurable, you can now use CVS via ssh.
+	  Note that only password-less logins are supported,
+	  so generate your public/private key today!
+
 2003-01-15 Mickael Marchand <marchand@kde.org>
-  * made "Close Others" (tabs) work
+	* made "Close Others" (tabs) work
 
 2003-01-15 Julian Rockey <linux@jrockey.com>
 	* parts/filecreate
 	  - added "New" option into Gideon's "File" menu
-	
+
 2003-01-14 Mickael Marchand <marchand@kde.org>
-  * repaired subversion part
-  * added svn diff support (trough the diff viewer)
+	* repaired subversion part
+	* added svn diff support (trough the diff viewer)
 
 2003-01-14 Harald Fernengel <harry@kdevelop.org>
 	* added KDE simple application template (khello)
