--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-01-18 Alexander Dymo <cloudtemple@mksat.net>
+	* cppsupport:
+	  - improve new class dialog
+	    - support multiple inheritance for c++ classes
+	    - cosmetic improvements
+
 2003-01-17 Harald Fernengel <harry@kdevelop.org>
 	* made CVS shell configurable, you can now use CVS via ssh.
 	  Note that only password-less logins are supported,
