--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-01-17  Ralf Nolden <nolden@kde.org>
+    * Added second patch for sorting the books in the doctreeview. Qt is now on top, then all other
+      kdelibs-apidocs, then automatically look up if there are other *-apidocs packages installed
+      (like libkonq)
+    * fixed the sorting of the additional files like classes.html into the tree by inserting 
+      the classes first, then sort, then insert the additional files and move them to the top of a book
+    * fixed the problem with the smearing of the treeview if the arglist is used by stripping down
+      enums to enum Name {} 
+    
 2003-01-14  Ralf Nolden <nolden@kde.org>
     * Added patch for displaying doxygen-generated api-docs from KDE 3
       originally by Stephan Kulow <coolo@kde.org>, adapted by Dirk Schmidt <Dreisam-RD@gmx.de>
