--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-24 Harald Fernengel <harry@kdevelop.org>
+        * default keys to move to next/prev window are now
+          ALT-Right / ALT-Left (as in kate)
+
 2003-01-18 Alexander Dymo <cloudtemple@mksat.net>
 	* cppsupport:
 	  - improve new class dialog
