--- a/parts/filecreate/README
+++ b/parts/filecreate/README
@@ -21,6 +21,24 @@ Example XML:
     </filetypes>
   </kdevfilecreate>
 
+You can also use global template definitions supplied with the FileCreate part:
+  <kdevfilecreate>
+    <useglobaltypes>
+      <type ext="ui" />
+    </useglobaltypes>
+    <filetypes>
+      <type ext="py" name="Python" create="template"/>
+    </filetypes>
+  </kdevfilecreate>
+
+If a type has subtypes, and no subtypes are specified, then all subtypes are assumed to be required (as in the example above). Otherwise, specific subtypes should be specified:
+
+<useglobaltypes>
+  <type ext="ui">
+    <subtype ref="dialog"/>
+  </type>
+</useglobaltypes>
+
 There's no GUI to configure this XML at present. Usually, it forms part of the base .kdevelop file created by the appwizard.
 
 Julian Rockey
