*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-30 Julian Rockey <linux@jrockey.com>
+	* lib/interfaces, src:
+	  - Make CreateFile interface available globally. 
+	* parts/autoproject:
+	  - Use CreateFile interface if available for creating new files
 2003-01-27 F@lk Brettschneider <falk@kdevelop.org>
 	* QEditor-Plugin: Ctrl+Left, Ctrl+Right, Ctrl+Del and Ctrl+Backspace much more better now
 
