--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-02-04 Roberto Raggi <roberto@kdevelop.org>
+	* added text hints support to qeditor
+
 2003-02-04 F@lk Brettschneider <falk@kdevelop.org>
 	* interface changed: KDevTopLevel renamed to KDevMainWindow, topLevel() renamed to mainWindow()
 	* bugfix: proper work of session restoring of maximized views in Childframe mode
