--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-02-05 F@lk Brettschneider <falk@kdevelop.org>
+	* now it compiles and runs on KDE-3.0.x again
+
 2003-02-04 Mickael Marchand <marchand@kde.org>
 	* parts/svn:
 	  - update to subversion 0.17, minor API changes
